# ner-gastronomia-restaurantes

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
assets/data/: camaroes.json  camaroes_extraido.json  coco_bambu.json  coco_bambu_extraido.json
outputs/: grafo_camaroes.html  grafo_camaroes_resumo.html  grafo_coco_bambu.html  grafo_coco_bambu_resumo.html
src/: clean_menu_data.py
src/constants/: __init__.py  acompanhamento_hints.py  auto_exclusao_ruido.py  auto_exclusao_termos.py  auto_stopwords.py  entidades_ativas.py  tecnica_molho_hints.py
src/extracoes/: __init__.py  extract_livemenu.py  extract_pdf_menu.py
