[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
]

[tool.ruff]
# Configuração do Ruff
line-length = 130
target-version = "py312"

[tool.ruff.lint]
# Regras ativadas (apenas essenciais)
select = [
    "E",   # pycodestyle errors (apenas erros críticos)
    "F",   # pyflakes (erros de sintaxe)
]

# Ignorar regras específicas para melhorar performance
ignore = [
    "E501",  # line too long (já controlado por line-length)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Permite imports não utilizados em __init__.py

[tool.ruff.format]
# Formatação automática
quote-style = "double"
indent-style = "space"
# Sempre quebra linha em objetos, listas, dicionários e parâmetros de função
skip-magic-trailing-comma = false
